css/faces.css
/* this is definitely automatable */

article[who]::before {
  display: block;
  float: left;
  aspect-ratio: 1/1;
  height: 97px;
  content: "";
  background: url('/images/faces/Unknown.png') center/100% 100%;
  margin-right: 15px;
}

/* spax */

article[who=spax]::before {
  background-image: url('/images/faces/spax/Smirk.png');
}

article[who=spax][emotion=blush]::before {
  background-image: url('/images/faces/spax/Blush.png');
}

article[who=spax][emotion=confused]::before {
  background-image: url('/images/faces/spax/Confused.png');
}

article[who=spax][emotion=disappointed]::before {
  background-image: url('/images/faces/spax/Disappointed.png');
}

article[who=spax][emotion=dizzy]::before {
  background-image: url('/images/faces/spax/Dizzy.png');
}

article[who=spax][emotion=enraged]::before {
  background-image: url('/images/faces/spax/Enraged.png');
}

article[who=spax][emotion=happy]::before {
  background-image: url('/images/faces/spax/Happy.png');
}

article[who=spax][emotion=look]::before {
  background-image: url('/images/faces/spax/Look.png');
}

article[who=spax][emotion=neutral]::before {
  background-image: url('/images/faces/spax/Neutral.png');
}

article[who=spax][emotion=dizzy]::before {
  background-image: url('/images/faces/spax/Dizzy.png');
}

article[who=spax][emotion=enraged]::before {
  background-image: url('/images/faces/spax/Enraged.png');
}

article[who=spax][emotion=pensive]::before {
  background-image: url('/images/faces/spax/Pensive.png');
}

article[who=spax][emotion=sleep]::before {
  background-image: url('/images/faces/spax/Sleep.png');
}

article[who=spax][emotion=smirk]::before {
  background-image: url('/images/faces/spax/Smirk.png');
}

article[who=spax][emotion=surprised]::before {
  background-image: url('/images/faces/spax/Surprised.png');
}

article[who=spax][emotion=sus]::before {
  background-image: url('/images/faces/spax/Sus.png');
}

article[who=spax][emotion=sweat-drop]::before,
article[who=spax][emotion=sweat_drop]::before {
  background-image: url('/images/faces/spax/Sweat_Drop.png');
}

article[who=spax][emotion=talk]::before {
  background-image: url('/images/faces/spax/Talk.png');
}

article[who=spax][emotion=woo]::before {
  background-image: url('/images/faces/spax/Woo.png');
}

article[who=spax][emotion=worried]::before {
  background-image: url('/images/faces/spax/Worried.png');
}

/* aimottle */

article[who=aimottle]::before {
  background-image: url('/images/faces/aimottle/Neutral.png');
}

article[who=aimottle][emotion=angry]::before {
  background-image: url('/images/faces/aimottle/Angry.png');
}

article[who=aimottle][emotion=neutral]::before {
  background-image: url('/images/faces/aimottle/Neutral.png');
}

article[who=aimottle][emotion=unsure]::before {
  background-image: url('/images/faces/aimottle/Unsure.png');
}

/* caina */

article[who=caina]::before {
  background-image: url('/images/faces/caina/Neutral.png');
}

article[who=caina][emotion=concerned]::before {
  background-image: url('/images/faces/caina/Concerned.png');
}

article[who=caina][emotion=disapproval]::before {
  background-image: url('/images/faces/caina/Disapproval.png');
}

article[who=caina][emotion=down]::before {
  background-image: url('/images/faces/caina/Down.png');
}

article[who=caina][emotion=laugh]::before {
  background-image: url('/images/faces/caina/Laugh.png');
}

article[who=caina][emotion=look]::before {
  background-image: url('/images/faces/caina/Look.png');
}

article[who=caina][emotion=neutral]::before {
  background-image: url('/images/faces/caina/Neutral.png');
}

article[who=caina][emotion=smile]::before {
  background-image: url('/images/faces/caina/Smile.png');
}

article[who=caina][emotion=sneer]::before {
  background-image: url('/images/faces/caina/Sneer.png');
}

/* charles */

article[who=charles]::before {
  background-image: url('/images/faces/charles/Neutral.png');
}

article[who=charles][emotion=look-down]::before,
article[who=charles][emotion=look_down]::before {
  background-image: url('/images/faces/charles/Look_Down.png');
}

article[who=charles][emotion=neutral]::before {
  background-image: url('/images/faces/charles/Neutral.png');
}

article[who=charles][emotion=sweat-drop]::before,
article[who=charles][emotion=sweat_drop]::before {
  background-image: url('/images/faces/charles/Sweat_Drop.png');
}

/* claire */

article[who=claire]::before {
  background-image: url('/images/faces/claire/Neutral.png');
}

article[who=claire][emotion=aghast]::before {
  background-image: url('/images/faces/claire/Aghast.png');
}

article[who=claire][emotion=dizzy]::before {
  background-image: url('/images/faces/claire/Dizzy.png');
}

article[who=claire][emotion=happy]::before {
  background-image: url('/images/faces/claire/Happy.png');
}

article[who=claire][emotion=look]::before {
  background-image: url('/images/faces/claire/Look.png');
}

article[who=claire][emotion=mad]::before {
  background-image: url('/images/faces/claire/Mad.png');
}

article[who=claire][emotion=neutral]::before {
  background-image: url('/images/faces/claire/Neutral.png');
}

article[who=claire][emotion=pensive]::before {
  background-image: url('/images/faces/claire/Pensive.png');
}

article[who=claire][emotion=sad]::before {
  background-image: url('/images/faces/claire/Sad.png');
}

article[who=claire][emotion=sigh]::before {
  background-image: url('/images/faces/claire/Sigh.png');
}

/* dragon */

article[who=dragon]::before {
  background-image: url('/images/faces/dragon/Neutral.png');
}

article[who=dragon][emotion=dismiss]::before {
  background-image: url('/images/faces/dragon/Dismiss.png');
}

article[who=dragon][emotion=familiar]::before {
  background-image: url('/images/faces/dragon/Familiar.png');
}

article[who=dragon][emotion=neutral]::before {
  background-image: url('/images/faces/dragon/Neutral.png');
}

article[who=dragon][emotion=reveal]::before {
  background-image: url('/images/faces/dragon/Reveal.png');
}
/* ... */

